--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
                     <li>Dane udostępnione przez ZTM Gdańsk</li>
                     <li>Hosting Google podłaczony pod domenę OVH</li>
                 </ul>
-                <p>Kod strony: <a href="#" class="font-weight-bold">Git</a></p>
+                <p>Kod strony: <a href="https://github.com/mishaty13/zkm" target="_blank" class="font-weight-bold">Git</a></p>
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
