--- a/src/app/stops/stop-list/stop-list.component.html
+++ b/src/app/stops/stop-list/stop-list.component.html
@@ -1,5 +1,5 @@
 <div class=" article-container shadow-sm"> 
-    <h3 class="article-title">Lista wszystkich przystanków</h3>
+    <h3 class="article-title">Lista przystanków</h3>
     
     <!-- spinner when loading-->
     <div *ngIf="!stopList && !errorMsg" class="d-flex justify-content-center">
