--- a/src/styles.sass
+++ b/src/styles.sass
@@ -40,6 +40,7 @@ a, a:hover
     padding: 1em
     padding-top: 1.5em
     magrin-bottom: 2em
+    overflow: auto
 
 .article-title
     position: absolute
