--- a/src/app/stops/stops.component.html
+++ b/src/app/stops/stops.component.html
@@ -1,4 +1,4 @@
-<div class="row p-4 m-0">
+<div class="row m-0 py-4 px-0">
     <div class="col-lg-7 mb-12">
         <app-departures-at-stop 
             [currentStopName]="currentStopName" 
