--- a/src/app/stops/stops.component.html
+++ b/src/app/stops/stops.component.html
@@ -13,6 +13,7 @@
             (emitStopToDepartures)="showStop($event)"
             [stopList]="stopList"
             [errorMsg]="stopListErrorMsg" 
+            [stopListDate]="stopListDate"
         ></app-stop-list>        
     </div>
 </div>
