--- a/src/styles.sass
+++ b/src/styles.sass
@@ -18,7 +18,7 @@ a, a:hover
     background: $primary
     color: white
     margin: 0
-    padding: 2em
+    padding: 1em 2em
     a
         text-decoration: inherit
 
@@ -33,7 +33,7 @@ a, a:hover
     background: $primary
     color: white
     margin: 0
-    padding: 2em
+    padding: 0.5em 2em 1em 2em
 
 .article-container
     border: $secondary solid 1px
