Remove ignored files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container-lg main-container">
     <header class="heading-container">
+        <img src="/assets/bus-stop.svg" class="logo" alt="Ikona logo">
         <h1 class="m-0">
             Dynamiczne odjazdy
         </h1>
