--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,1 +1,11 @@
+.logo
+    width: 3em
+    height: 3em
+    display: inline-block
+    fill: white
+    margin-right: 2em
+    margin-bottom: 0.8em
 
+h1
+    display: inline-block
+    vertical-align: bottom
