--- a/src/styles.sass
+++ b/src/styles.sass
@@ -18,7 +18,7 @@ a, a:hover
     background: $primary
     color: white
     margin: 0
-    padding: 1em 2em
+    padding: 2em 2em 1em 2em
     a
         text-decoration: inherit
 
